--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-allauth==0.45.0
 django-configurations==2.2
 django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.2
+django-filter==21.1
 django-registration==3.2
 djangorestframework==3.12.4
 drf-yasg==1.20.0
