--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,10 @@ django-allauth==0.45.0
 django-configurations==2.2
 django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.2
-django-filter==21.1
+django-filter==2.4.0
 django-registration==3.2
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.4.0
 drf-yasg==1.20.0
 idna==2.6
 inflection==0.5.1
@@ -40,7 +41,7 @@ pycparser==2.20
 pycrypto==2.6.1
 Pygments==2.2.0
 PyGObject==3.26.1
-PyJWT==2.1.0
+PyJWT==1.7.1
 pyparsing==2.4.7
 python-apt==1.6.5+ubuntu0.3
 python3-openid==3.2.0
