--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.2
 django-filter==2.4.0
 django-registration==3.2
+django-versatileimagefield==2.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.4.0
 drf-yasg==1.20.0
@@ -36,6 +37,7 @@ oauthlib==3.1.1
 packaging==21.0
 pexpect==4.2.1
 pickleshare==0.7.4
+Pillow==8.4.0
 prompt-toolkit==1.0.15
 pycparser==2.20
 pycrypto==2.6.1
@@ -44,6 +46,7 @@ PyGObject==3.26.1
 PyJWT==1.7.1
 pyparsing==2.4.7
 python-apt==1.6.5+ubuntu0.3
+python-magic==0.4.27
 python3-openid==3.2.0
 pytz==2021.1
 pyxdg==0.25
